--- a/private.html
+++ b/private.html
@@ -1247,7 +1247,11 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
               (&quot;teal&quot;, teal), (&quot;thistle&quot;, thistle), (&quot;tomato&quot;, tomato),
               (&quot;turquoise&quot;, turquoise), (&quot;violet&quot;, violet), (&quot;wheat&quot;, wheat),
               (&quot;white&quot;, white), (&quot;whitesmoke&quot;, whitesmoke), (&quot;yellow&quot;, yellow),
-              (&quot;yellowgreen&quot;, yellowgreen)]"><wbr />color<wbr />Names</a></li>
+              (&quot;yellowgreen&quot;, yellowgreen), (&quot;pastelbeige&quot;, pastelbeige),
+              (&quot;pastelblue&quot;, pastelblue), (&quot;pastelgreen&quot;, pastelgreen),
+              (&quot;pastelorange&quot;, pastelorange), (&quot;pastelpink&quot;, pastelpink),
+              (&quot;pastelwhite&quot;, pastelwhite), (&quot;pastelyellow&quot;, pastelyellow),
+              (&quot;pastelyellowgreen&quot;, pastelyellowgreen)]"><wbr />color<wbr />Names</a></li>
   <li><a class="reference" href="#start"
     title="start* = epochTime()"><wbr />start</a></li>
 
@@ -1326,6 +1330,20 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="bbrightblack* = bbright(bgBlack)"><wbr />bbrightblack</a></li>
   <li><a class="reference" href="#pastelgreen"
     title="pastelgreen* = &quot;\x1B[38;2;179;226;205m&quot;"><wbr />pastelgreen</a></li>
+  <li><a class="reference" href="#pastelorange"
+    title="pastelorange* = &quot;\x1B[38;2;253;205;172m&quot;"><wbr />pastelorange</a></li>
+  <li><a class="reference" href="#pastelblue"
+    title="pastelblue* = &quot;\x1B[38;2;203;213;232m&quot;"><wbr />pastelblue</a></li>
+  <li><a class="reference" href="#pastelpink"
+    title="pastelpink* = &quot;\x1B[38;2;244;202;228m&quot;"><wbr />pastelpink</a></li>
+  <li><a class="reference" href="#pastelyellowgreen"
+    title="pastelyellowgreen* = &quot;\x1B[38;2;230;245;201m&quot;"><wbr />pastelyellowgreen</a></li>
+  <li><a class="reference" href="#pastelyellow"
+    title="pastelyellow* = &quot;\x1B[38;2;255;242;174m&quot;"><wbr />pastelyellow</a></li>
+  <li><a class="reference" href="#pastelbeige"
+    title="pastelbeige* = &quot;\x1B[38;2;241;226;204m&quot;"><wbr />pastelbeige</a></li>
+  <li><a class="reference" href="#pastelwhite"
+    title="pastelwhite* = &quot;\x1B[38;2;204;204;204m&quot;"><wbr />pastelwhite</a></li>
   <li><a class="reference" href="#aliceblue"
     title="aliceblue* = &quot;\x1B[38;2;240;248;255m&quot;"><wbr />aliceblue</a></li>
   <li><a class="reference" href="#antiquewhite"
@@ -1971,7 +1989,11 @@ terminalwidth available in tw
               <span class="Other">(</span><span class="StringLit">&quot;teal&quot;</span><span class="Other">,</span> <span class="Identifier">teal</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;thistle&quot;</span><span class="Other">,</span> <span class="Identifier">thistle</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;tomato&quot;</span><span class="Other">,</span> <span class="Identifier">tomato</span><span class="Other">)</span><span class="Other">,</span>
               <span class="Other">(</span><span class="StringLit">&quot;turquoise&quot;</span><span class="Other">,</span> <span class="Identifier">turquoise</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;violet&quot;</span><span class="Other">,</span> <span class="Identifier">violet</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;wheat&quot;</span><span class="Other">,</span> <span class="Identifier">wheat</span><span class="Other">)</span><span class="Other">,</span>
               <span class="Other">(</span><span class="StringLit">&quot;white&quot;</span><span class="Other">,</span> <span class="Identifier">white</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;whitesmoke&quot;</span><span class="Other">,</span> <span class="Identifier">whitesmoke</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;yellow&quot;</span><span class="Other">,</span> <span class="Identifier">yellow</span><span class="Other">)</span><span class="Other">,</span>
-              <span class="Other">(</span><span class="StringLit">&quot;yellowgreen&quot;</span><span class="Other">,</span> <span class="Identifier">yellowgreen</span><span class="Other">)</span><span class="Other">]</span></pre></dt>
+              <span class="Other">(</span><span class="StringLit">&quot;yellowgreen&quot;</span><span class="Other">,</span> <span class="Identifier">yellowgreen</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;pastelbeige&quot;</span><span class="Other">,</span> <span class="Identifier">pastelbeige</span><span class="Other">)</span><span class="Other">,</span>
+              <span class="Other">(</span><span class="StringLit">&quot;pastelblue&quot;</span><span class="Other">,</span> <span class="Identifier">pastelblue</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;pastelgreen&quot;</span><span class="Other">,</span> <span class="Identifier">pastelgreen</span><span class="Other">)</span><span class="Other">,</span>
+              <span class="Other">(</span><span class="StringLit">&quot;pastelorange&quot;</span><span class="Other">,</span> <span class="Identifier">pastelorange</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;pastelpink&quot;</span><span class="Other">,</span> <span class="Identifier">pastelpink</span><span class="Other">)</span><span class="Other">,</span>
+              <span class="Other">(</span><span class="StringLit">&quot;pastelwhite&quot;</span><span class="Other">,</span> <span class="Identifier">pastelwhite</span><span class="Other">)</span><span class="Other">,</span> <span class="Other">(</span><span class="StringLit">&quot;pastelyellow&quot;</span><span class="Other">,</span> <span class="Identifier">pastelyellow</span><span class="Other">)</span><span class="Other">,</span>
+              <span class="Other">(</span><span class="StringLit">&quot;pastelyellowgreen&quot;</span><span class="Other">,</span> <span class="Identifier">pastelyellowgreen</span><span class="Other">)</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -2157,6 +2179,41 @@ check execution timing with one line see doFinish
 
 </dd>
 <dt id="pastelgreen"><a name="pastelgreen"></a><pre><span class="Identifier">pastelgreen</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\x1B[38;2;179;226;205m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="pastelorange"><a name="pastelorange"></a><pre><span class="Identifier">pastelorange</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\x1B[38;2;253;205;172m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="pastelblue"><a name="pastelblue"></a><pre><span class="Identifier">pastelblue</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\x1B[38;2;203;213;232m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="pastelpink"><a name="pastelpink"></a><pre><span class="Identifier">pastelpink</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\x1B[38;2;244;202;228m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="pastelyellowgreen"><a name="pastelyellowgreen"></a><pre><span class="Identifier">pastelyellowgreen</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\x1B[38;2;230;245;201m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="pastelyellow"><a name="pastelyellow"></a><pre><span class="Identifier">pastelyellow</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\x1B[38;2;255;242;174m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="pastelbeige"><a name="pastelbeige"></a><pre><span class="Identifier">pastelbeige</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\x1B[38;2;241;226;204m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="pastelwhite"><a name="pastelwhite"></a><pre><span class="Identifier">pastelwhite</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\x1B[38;2;204;204;204m&quot;</span></pre></dt>
 <dd>
 
 
@@ -3816,7 +3873,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-14 20:31:28 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-14 21:53:55 UTC</small>
       </div>
     </div>
   </div>
